--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
 #Grails Metadata file
-#Fri Jan 31 09:59:30 CET 2014
-app.grails.version=2.1.5
+#Sun Feb 09 14:24:33 CET 2014
+app.grails.version=2.3.4
+app.name=grails-mongo-auditlog
